--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.5.0",
     "classnames": "^2.5.1",
     "concurrently": "^9.1.2",
     "core-js": "^3.38.1",
@@ -41,6 +41,7 @@
     "pg": "^8.13.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
